--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
 #stretchContainer {
     
 }
+
+.rotate {
+    animation: rotation 8s infinite linear;
+  }
+@keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
+  }
